--- a/style.css
+++ b/style.css
@@ -144,3 +144,34 @@ input[type="color"]::-moz-color-swatch {
 ::-webkit-scrollbar-thumb:hover {
   background: #555; 
 }
+
+.slider {
+  margin-top: 14px;
+  -webkit-appearance: none;
+  width: 100%;
+  height: 5px;
+  border-radius: 5px;  
+  background: #FFFFFF;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%; 
+  background: #E0C6C6;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: #E0C6C6;
+  cursor: pointer;
+}
